<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.IntroActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:gravity="center"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:orientation="vertical"
            >
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:src="@drawable/logo2"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                />

            <LinearLayout
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editTextText"
                    android:layout_width="600dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="1"
                    android:background="@drawable/edittext_backgroud"
                    android:drawableStart="@drawable/search_icon"
                    android:drawablePadding="8dp"
                    android:ems="10"
                    android:hint="@string/searching"
                    android:inputType="text"
                    android:padding="8dp"
                    android:textStyle="italic" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/imageView8"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginTop="10dp"

                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/bell" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:layout_marginStart="1dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/banner_background"

                >

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cl_banner_id"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <ImageView
                        android:id="@+id/imageView10"
                        android:layout_width="155dp"
                        android:layout_height="231dp"

                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/girl2" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="200dp"
                        android:layout_height="70dp"
                        android:layout_marginLeft="30dp"
                        android:fontFamily="@font/playfair_reg"
                        android:text="@string/what_would_you_like_to_learn_today"
                        android:textColor="@color/white"
                        android:textSize="21sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/imageView10"
                        app:layout_constraintHorizontal_bias="0.736"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.177" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/button"
                        android:layout_width="85dp"
                        android:layout_height="46dp"
                        android:background="@drawable/red_button"

                        android:fontFamily="@font/playfair_reg"
                        android:text="Buy Now"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:layout_marginBottom="10dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/imageView10"
                        app:layout_constraintStart_toStartOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/playfair_reg"
                    android:layout_weight="1"
                    android:text="Category"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="See All"
                    android:visibility="gone"
                    android:textAlignment="textEnd"


                    android:textColor="@color/red" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:id="@+id/rv_cat_id"

                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView68"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/popular_courses"
                    android:fontFamily="@font/playfair_reg"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView77"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/see_all"
                    android:visibility="gone"
                    android:textAlignment="textEnd"


                    android:textColor="@color/red" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_course_list_id"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:clipToPadding="false"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="100dp"/>
        </LinearLayout>
    </ScrollView>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <com.google.android.material.bottomappbar.BottomAppBar
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="bottom"
            android:background="#f8f8f8"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.25"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView44"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"

                        app:srcCompat="@drawable/btn_1"
                        app:tint="#616161" />

                    <TextView
                        android:id="@+id/textView45"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/explorar"
                        android:textAlignment="center"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.25"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView47"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"

                        app:srcCompat="@drawable/btn_2"
                        app:tint="#616161" />

                    <TextView
                        android:id="@+id/textView41"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/wishlist"
                        android:textAlignment="center"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.25"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView43"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"

                        app:srcCompat="@drawable/btn_3"
                        app:tint="#616161" />

                    <TextView
                        android:id="@+id/textView47"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/my_course"
                        android:textAlignment="center"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.25"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"

                        app:srcCompat="@drawable/btn_4"
                        app:tint="#616161" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/account"
                        android:textAlignment="center"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>

        </com.google.android.material.bottomappbar.BottomAppBar>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

<!--

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:layout_weight="0.25"
                    android:gravity="center"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        app:srcCompat="@drawable/cat1" />

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/business"
                        android:textAlignment="center"
                        android:textColor="@color/purple"
                        android:textSize="17sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:layout_weight="0.25"
                    android:gravity="center"
                    android:orientation="vertical">
             <ImageView
                        android:id="@+id/imageView33"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        app:srcCompat="@drawable/cat2" />

                    <TextView
                        android:id="@+id/textView101"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/creative"
                        android:textAlignment="center"
                        android:textColor="@color/purple"
                        android:textSize="17sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:layout_weight="0.25"
                    android:gravity="center"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/imageView32"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        app:srcCompat="@drawable/cat3" />

                    <TextView
                        android:id="@+id/textView102"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/coding"
                        android:textAlignment="center"
                        android:textColor="@color/purple"
                        android:textSize="17sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="12dp"
                    android:layout_weight="0.25"
                    android:gravity="center"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/imageView35"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        app:srcCompat="@drawable/cat4" />

                    <TextView
                        android:id="@+id/textView107"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/gaming"
                        android:textAlignment="center"
                        android:textColor="@color/purple"
                        android:textSize="17sp"
                        android:textStyle="bold" />
                </LinearLayout>

-->